choose_starter_main_res_nsbmd = copy_gen.process(
    files(
        '00_tt_tabletop.NSBMD',
        '01_tt_turntable.NSBMD',
        '02_tt_ball.NSBMD',
        '03_tt_ball_ef.NSBMD',
    )
)

choose_starter_main_res_nsbca = copy_gen.process(
    files(
        '04_tt_ball_ef.NSBCA',
        '05_tt_ball.NSBCA',
        '06_ball_rock.NSBCA',
    )
)

choose_starter_main_res_nsbta = copy_gen.process(
    files(
        '07_tt_turntable.NSBTA'
    )
)

choose_starter_main_res_nclr = copy_gen.process(
    files(
        '08_window.NCLR',
        '09_bgl5.NCLR',
        '12_bgl2.NCLR',
        '15_bgl6.NCLR',
    )
)

choose_starter_main_res_ncgr = copy_gen.process(
    files(
        '10_bgl5.NCGR',
        '13_bgl2.NCGR',
        '16_bgl6.NCGR',
    )
)

choose_starter_main_res_nscr = copy_gen.process(
    files(
        '11_bgl5.NSCR',
        '14_bgl2.NSCR',
        '17_bgl6.NSCR',
    )
)