choose_starter_sub_res_ncgr = copy_gen.process(
    files(
        'choose_starter_sub_res_00000000.NCGR',
        'choose_starter_sub_res_00000003.NCGR',
        'choose_starter_sub_res_00000009.NCGR',
        'choose_starter_sub_res_00000011.NCGR',
        'choose_starter_sub_res_00000014.NCGR',
        'choose_starter_sub_res_00000017.NCGR',
        'choose_starter_sub_res_00000020.NCGR',
        'choose_starter_sub_res_00000023.NCGR',
    )
)

choose_starter_sub_res_nscr = copy_gen.process(
    files(
        'choose_starter_sub_res_00000001.NSCR',
        'choose_starter_sub_res_00000004.NSCR',
    )
)

choose_starter_sub_res_nclr = copy_gen.process(
    files(
        'choose_starter_sub_res_00000002.NCLR',
        'choose_starter_sub_res_00000005.NCLR',
        'choose_starter_sub_res_00000006.NCLR',
        'choose_starter_sub_res_00000007.NCLR',
        'choose_starter_sub_res_00000008.NCLR',
    )
)

choose_starter_sub_res_ncer = copy_gen.process(
    files(
        'choose_starter_sub_res_00000010.NCER',
        'choose_starter_sub_res_00000012.NCER',
        'choose_starter_sub_res_00000015.NCER',
        'choose_starter_sub_res_00000018.NCER',
        'choose_starter_sub_res_00000021.NCER',
        'choose_starter_sub_res_00000024.NCER',
    )
)

choose_starter_sub_res_nanr = copy_gen.process(
    files(
        'choose_starter_sub_res_00000013.NANR',
        'choose_starter_sub_res_00000016.NANR',
        'choose_starter_sub_res_00000019.NANR',
        'choose_starter_sub_res_00000022.NANR',
        'choose_starter_sub_res_00000025.NANR',
    )
)
