pgear_gra_nclr = copy_gen.process(
    files(
        'pgear_gra_00000000.NCLR',
        'pgear_gra_00000001.NCLR',
        'pgear_gra_00000002.NCLR',
        'pgear_gra_00000003.NCLR',
        'pgear_gra_00000004.NCLR',
        'pgear_gra_00000005.NCLR',
        'pgear_gra_00000024.NCLR',
        'pgear_gra_00000025.NCLR',
        'pgear_gra_00000026.NCLR',
        'pgear_gra_00000027.NCLR',
        'pgear_gra_00000028.NCLR',
        'pgear_gra_00000029.NCLR',
        'pgear_gra_00000030.NCLR',
        'pgear_gra_00000031.NCLR',
        'pgear_gra_00000032.NCLR',
        'pgear_gra_00000033.NCLR',
        'pgear_gra_00000034.NCLR',
        'pgear_gra_00000035.NCLR',
    )
)

pgear_gra_ncgr_clobber = ncgr_gen.process(
    files(
        'pgear_gra_00000006.png',
        'pgear_gra_00000007.png',
        'pgear_gra_00000008.png',
        'pgear_gra_00000009.png',
        'pgear_gra_00000010.png',
        'pgear_gra_00000011.png',
    ),
    extra_args : CLOBBER_SIZE_VERSION101_NCGR_FLAGS
)

pgear_gra_ncgr_sopc = ncgr_gen.process(
    files(
        'pgear_gra_00000036.png',
        'pgear_gra_00000037.png',
        'pgear_gra_00000038.png',
        'pgear_gra_00000039.png',
        'pgear_gra_00000040.png',
        'pgear_gra_00000041.png',
        'pgear_gra_00000048.png',
        'pgear_gra_00000049.png',
        'pgear_gra_00000050.png',
        'pgear_gra_00000051.png',
        'pgear_gra_00000052.png',
        'pgear_gra_00000053.png',
    ),
    extra_args : VERSION101_SOPC_NCGR_FLAGS
)

pgear_gra_ncer = copy_gen.process(
    files(
        'pgear_gra_00000012.NCER',
        'pgear_gra_00000014.NCER',
        'pgear_gra_00000016.NCER',
        'pgear_gra_00000018.NCER',
        'pgear_gra_00000020.NCER',
        'pgear_gra_00000022.NCER',
    )
)

pgear_gra_nanr = copy_gen.process(
    files(
        'pgear_gra_00000013.NANR',
        'pgear_gra_00000015.NANR',
        'pgear_gra_00000017.NANR',
        'pgear_gra_00000019.NANR',
        'pgear_gra_00000021.NANR',
        'pgear_gra_00000023.NANR',
    )
)

pgear_gra_nscr = copy_gen.process(
    files(
        'pgear_gra_00000042.NSCR',
        'pgear_gra_00000043.NSCR',
        'pgear_gra_00000044.NSCR',
        'pgear_gra_00000045.NSCR',
        'pgear_gra_00000046.NSCR',
        'pgear_gra_00000047.NSCR',
        'pgear_gra_00000054.NSCR',
        'pgear_gra_00000055.NSCR',
        'pgear_gra_00000056.NSCR',
        'pgear_gra_00000057.NSCR',
        'pgear_gra_00000058.NSCR',
        'pgear_gra_00000059.NSCR',
    )
)
