record_nclr = copy_gen.process(
    files(
        'record_00000000.NCLR',
        'record_00000004.NCLR',
        'record_00000007.NCLR',
        'record_00000011.NCLR',
    )
)

record_bin = copy_gen.process(
    files(
        'record_00000001.bin',
        'record_00000002.bin',
        'record_00000003.bin',
        'record_00000005.bin',
        'record_00000006.bin',
        'record_00000008.bin',
        'record_00000009.bin',
        'record_00000010.bin',
        'record_00000012.bin',
        'record_00000013.bin',
        'record_00000014.bin',
    )
)