pgconf_gra_nclr = copy_gen.process(
    files(
        'pgconf_gra_00000000.NCLR',
        'pgconf_gra_00000004.NCLR',
        'pgconf_gra_00000005.NCLR',
        'pgconf_gra_00000006.NCLR',
        'pgconf_gra_00000007.NCLR',
        'pgconf_gra_00000008.NCLR',
        'pgconf_gra_00000009.NCLR',
    )
)

pgconf_gra_nanr = copy_gen.process(
    files(
        'pgconf_gra_00000003.NANR'
    )
)

pgconf_gra_ncer = copy_gen.process(
    files(
        'pgconf_gra_00000002.NCER'
    )
)

pgconf_gra_ncgr_clobber = ncgr_gen.process(
    files(
        'pgconf_gra_00000001.png'
    ),
    extra_args : CLOBBER_SIZE_VERSION101_NCGR_FLAGS
)

pgconf_gra_ncgr_sopc = ncgr_gen.process(
    files(
        'pgconf_gra_00000010.png',
        'pgconf_gra_00000011.png',
        'pgconf_gra_00000012.png',
        'pgconf_gra_00000013.png',
        'pgconf_gra_00000014.png',
        'pgconf_gra_00000015.png',
    ),
    extra_args : VERSION101_SOPC_NCGR_FLAGS
)

pgconf_gra_nscr = copy_gen.process(
    files(
        'pgconf_gra_00000016.NSCR',
        'pgconf_gra_00000017.NSCR',
        'pgconf_gra_00000018.NSCR',
        'pgconf_gra_00000019.NSCR',
        'pgconf_gra_00000020.NSCR',
        'pgconf_gra_00000021.NSCR',
        'pgconf_gra_00000022.NSCR',
        'pgconf_gra_00000023.NSCR',
        'pgconf_gra_00000024.NSCR',
        'pgconf_gra_00000025.NSCR',
        'pgconf_gra_00000026.NSCR',
        'pgconf_gra_00000027.NSCR',
    )
)
